[package]
name = "catla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "catla-server"
path = "src/server.rs"

[[bin]]
name = "catla-client"
path = "src/client.rs"

[dependencies]
pom = "3.2.0"
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.3"
